; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/compat/opensolaris/kern/extr_opensolaris_vfs.c_vfs_optionisset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/compat/opensolaris/kern/extr_opensolaris_vfs.c_vfs_optionisset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.vfsoptlist* }
%struct.vfsoptlist = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vfs_optionisset(%struct.TYPE_3__* %0, i8* %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca %struct.vfsoptlist*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8** %2, i8*** %7, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load %struct.vfsoptlist*, %struct.vfsoptlist** %11, align 8
  store %struct.vfsoptlist* %12, %struct.vfsoptlist** %8, align 8
  %13 = load %struct.vfsoptlist*, %struct.vfsoptlist** %8, align 8
  %14 = icmp eq %struct.vfsoptlist* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %25

16:                                               ; preds = %3
  %17 = load %struct.vfsoptlist*, %struct.vfsoptlist** %8, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load i8**, i8*** %7, align 8
  %20 = call i32 @vfs_getopt(%struct.vfsoptlist* %17, i8* %18, i8** %19, i32* null)
  store i32 %20, i32* %9, align 4
  %21 = load i32, i32* %9, align 4
  %22 = icmp ne i32 %21, 0
  %23 = zext i1 %22 to i64
  %24 = select i1 %22, i32 0, i32 1
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %16, %15
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @vfs_getopt(%struct.vfsoptlist*, i8*, i8**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
